# windows-dev-toolkit

./: .flake8  Dockerfile  Makefile  README.md  activate_windows.py  activate_windows_10.py  build_script.py  install_office_ltsc.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.yml
.github/workflows/: main.yml
docs/: CI_CD.md
src/: main.py
src/modules/: developer_keys.py  environment_setup.py  office_deployment.py  windows_config.py
src/utils/: admin_check.py  cleanup.py  feature_detection.py  ui.py
tests/: __init__.py  test_admin_check.py  test_cleanup.py  test_environment.py  test_integration.py  test_office_deployment.py  test_tui.py  test_windows_config.py
