[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-dev-toolkit"
version = "1.0.0"
description = "Windows Developer Utilities Toolkit"
readme = "README.md"
authors = [
    {name = "Your Development Team", email = "team@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.4",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "pywin32>=303; platform_system == 'Windows'",
    "prompt_toolkit>=3.0.30",
    "tqdm>=4.64.0",
    "cryptography>=39.0.0",
    "wmi>=1.5.1",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.960",
]

[project.scripts]
windevtk = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=windows_dev_toolkit"